--- a/antora-ui-camel/src/css/header.css
+++ b/antora-ui-camel/src/css/header.css
@@ -17,9 +17,6 @@ body {
   word-wrap: break-word;
   z-index: var(--z-index-navbar);
   border-bottom: 1px solid var(--color-smoke-90);
-}
-
-.homepage .navbar {
   box-shadow: 0 0.5rem 3rem var(--color-smoke-70);
 }
 
@@ -389,8 +386,6 @@ body {
 
   .navbar-dropdown a.navbar-item:hover {
     background-color: var(--navbar-menu-hover-background);
-    text-decoration: underline;
-    text-decoration-color: var(--navbar-menu-hover-decoration-color);
   }
 }
 
@@ -416,8 +411,7 @@ body {
 }
 
 .navbar-search input {
-  border: 0;
-  border-bottom: 1px solid var(--nav-panel-divider-color);
+  border: 1px solid var(--nav-panel-divider-color);
   margin-top: 1rem;
   padding: 0.3rem 0.5rem 0.3rem 1.7rem;
   font-family: Open Sans, sans-serif;
